--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <script>
     (async () => {
-      const signalingUrl = 'wss://your-render-url'; // <<< REPLACE THIS
+      const signalingUrl = 'wss://sharescreenserver-toum.onrender.com'; // <<< REPLACE THIS
       const ws = new WebSocket(signalingUrl);
       const video = document.getElementById('video');
       const params = new URLSearchParams(window.location.search);
